--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
 <html lang="en">
-
-
-
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
@@ -151,12 +148,12 @@
 							<a href="news.html">Local Workshop in Georgia</a>
 						</h3>
 						<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-							<!-- <div class="meta">
+							<div class="meta">
 								<a href="#">
 									<span class="icon fa fa-calendar"></span> March 14, 2018
 									<span class="icon fa fa-comments"></span> 05
 								</a>
-							</div> -->
+							</div>
 							<div>
 								<a class="read_more" href="news.html">Read More</a>
 							</div>
@@ -368,13 +365,8 @@
 				</div>
 
 				<p class="col-lg-12 footer-text">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;
-					<script
-						type="dfc8af3ad5083476e1c6383c-text/javascript">document.write(new Date().getFullYear());</script>
-					All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by
-					<a href="https://colorlib.com/" target="_blank">Colorlib</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					All rights reserved
 				</p>
 			</div>
 		</div>
@@ -409,19 +401,6 @@
 		type="dfc8af3ad5083476e1c6383c-text/javascript"></script>
 	<script src="js/theme.js" type="dfc8af3ad5083476e1c6383c-text/javascript"></script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"
-		type="dfc8af3ad5083476e1c6383c-text/javascript"></script>
-	<script type="dfc8af3ad5083476e1c6383c-text/javascript">
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-23581568-13');
-</script>
-
-	<script src="../../../../ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js"
-		data-cf-settings="dfc8af3ad5083476e1c6383c-|49" defer=""></script>
 </body>
 
 
