--- a/news.html
+++ b/news.html
@@ -183,33 +183,28 @@
 
     <!--================ start footer Area  =================-->
     <footer class="footer-area section-gap">
-        <div class="container">
-            <div class="single-footer-widget footer_middle">
-                <a href="index.html">
-                    <img src="img/Project logo.jpg" alt="">
-                </a>
-                <p class="mt-50">24/7 Entrepreneurship</p>
-            </div>
-            <div class="footer-bottom footer_copy">
-                <div class="footer-social">
-                    <a href="https://www.facebook.com/groups/2278631732356338/?ref=bookmarks">
-                        <i class="fa fa-facebook"></i>
-                        <p>Join us on Facebook</p>
-                    </a>
-                </div>
+		<div class="container">
+			<div class="single-footer-widget footer_middle">
+				<a href="index.html">
+				<img src="img/Project logo.jpg" alt="">
+				</a>
+				<p class="mt-50">24/7 Entrepreneurship</p>
+			</div>
+			<div class="footer-bottom footer_copy">
+				<div class="footer-social">
+					<a href="https://www.facebook.com/groups/2278631732356338/?ref=bookmarks">
+						<i class="fa fa-facebook"></i>
+						<p>Join us on Facebook</p>
+					</a>
+				</div>
 
-                <p class="col-lg-12 footer-text">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;
-                    <script
-                        type="dfc8af3ad5083476e1c6383c-text/javascript">document.write(new Date().getFullYear());</script>
-                    All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                    <a href="https://colorlib.com/" target="_blank">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-            </div>
-        </div>
-    </footer>
+				<p class="col-lg-12 footer-text">
+					Copyright &copy;
+					All rights reserved
+				</p>
+			</div>
+		</div>
+	</footer>
     <!--================ End footer Area  =================-->
 
     <!-- ####################### Start Scroll to Top Area ####################### -->
@@ -240,19 +235,7 @@
         type="90bee6fd33dfeeb6063b0e29-text/javascript"></script>
     <script src="js/theme.js" type="90bee6fd33dfeeb6063b0e29-text/javascript"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"
-        type="90bee6fd33dfeeb6063b0e29-text/javascript"></script>
-    <script type="90bee6fd33dfeeb6063b0e29-text/javascript">
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-23581568-13');
-</script>
-
-    <script src="../../../../ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js"
-        data-cf-settings="90bee6fd33dfeeb6063b0e29-|49" defer=""></script>
 </body>
 
 
