--- a/partners.html
+++ b/partners.html
@@ -401,21 +401,9 @@
 		<div class="container">
 			<div class="single-footer-widget footer_middle">
 				<a href="index.html">
-					<img src="img/Project logo.jpg" alt="">
+				<img src="img/Project logo.jpg" alt="">
 				</a>
 				<p class="mt-50">24/7 Entrepreneurship</p>
-				<!-- <div id="mc_embed_signup">
-					<form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-					 method="get" class="subscribe_form relative">
-						<div class="input-group d-flex flex-row">
-							<input name="EMAIL" placeholder="Enter Email" onfocus="if (!window.__cfRLUnblockHandlers) return false; this.placeholder = ''" onblur="if (!window.__cfRLUnblockHandlers) return false; this.placeholder = 'Enter Email '" required="" type="email" data-cf-modified-dfc8af3ad5083476e1c6383c-="">
-							<button class="btn sub-btn">
-								<span class="lnr lnr-arrow-right"></span>
-							</button>
-						</div>
-						<div class="mt-10 info"></div>
-					</form>
-				</div> -->
 			</div>
 			<div class="footer-bottom footer_copy">
 				<div class="footer-social">
@@ -426,13 +414,8 @@
 				</div>
 
 				<p class="col-lg-12 footer-text">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;
-					<script
-						type="dfc8af3ad5083476e1c6383c-text/javascript">document.write(new Date().getFullYear());</script>
-					All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by
-					<a href="https://colorlib.com/" target="_blank">Colorlib</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					All rights reserved
 				</p>
 			</div>
 		</div>
@@ -468,19 +451,7 @@
 		type="4714ac38878fed6295faa804-text/javascript"></script>
 	<script src="js/theme.js" type="4714ac38878fed6295faa804-text/javascript"></script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"
-		type="4714ac38878fed6295faa804-text/javascript"></script>
-	<script type="4714ac38878fed6295faa804-text/javascript">
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-23581568-13');
-</script>
-
-	<script src="../../../../ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js"
-		data-cf-settings="4714ac38878fed6295faa804-|49" defer=""></script>
 </body>
 
 
