--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"
 		type="699115f1ce85989f7ea7f365-text/javascript"></script>
 	<script src="js/theme.js" type="699115f1ce85989f7ea7f365-text/javascript"></script>
-
+	<script src="js/script.js"></script>
 </body>
 
 
