--- a/gallery.html
+++ b/gallery.html
@@ -277,7 +277,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"
             type="54f4445f6d1fd6494469a447-text/javascript"></script>
         <script src="js/theme.js" type="54f4445f6d1fd6494469a447-text/javascript"></script>
-
+        <script src="js/script.js"></script>
     
 </body>
 
