--- a/news.html
+++ b/news.html
@@ -234,7 +234,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"
         type="90bee6fd33dfeeb6063b0e29-text/javascript"></script>
     <script src="js/theme.js" type="90bee6fd33dfeeb6063b0e29-text/javascript"></script>
-
+	<script src="js/script.js"></script>
 
 </body>
 
