--- a/partners.html
+++ b/partners.html
@@ -450,7 +450,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"
 		type="4714ac38878fed6295faa804-text/javascript"></script>
 	<script src="js/theme.js" type="4714ac38878fed6295faa804-text/javascript"></script>
-
+	<script src="js/script.js"></script>
 
 </body>
 
