--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 							</div>
 						</div>
 						<div class="col-md-12 text-right">
-							<button type="submit" value="submit" class="btn submit_btn">Send Message</button>
+							<button type="submit" class="btn submit_btn">Send Message</button>
 						</div>
 					</form>
 				</div>
